# MandelBrot

./: CMakeLists.txt
src/: Logger  Logger.cpp  Logger.hpp  main.cpp  main.hpp
